--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,10 +5,14 @@ body {
   margin: 0;
 }
 
-#root {
-  height: 100vh;
+body {
+  background-color: #1a1a1d;
 }
 
 * {
   box-sizing: border-box;
+}
+
+input[type='text'] {
+  font-size: 16px;
 }
